# ZRender

./: CMakeLists.txt  LICENSE  README.md
code/: main.cpp
code/include/: Mesh.hpp  Model.hpp  Rasterizer.hpp  global.hpp
code/src/: Model.cpp  Rasterizer.cpp  stb_image.cpp
